--- a/getinvolved.html
+++ b/getinvolved.html
@@ -39,136 +39,152 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
+      <br /><br />
+      <h1 class="garden-heading2">Events</h1>
+      <p>
+        Check out our upcoming events!
+        <br />In order to participate, use the contact form at the bottom of the
+        page to sign up at least 24 hours prior to the event. <br />
+        Make sure to include the event code, your full name, and any questions
+        you might have.
+      </p>
+      <br />
+      <h3>Follow us on Facebook for event postings!</h3>
+      <a href="#"><i class="fa fa-facebook"></i></a>
     </div>
+
     <div class="garden-section">
       <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
+
+      <section class="garden-section">
+        <div style="overflow-x: auto">
+          <table id="community-gardens">
+            <tr>
+              <th>Garden</th>
+              <th>Location</th>
+              <th>Plots</th>
+              <th>Contact</th>
+            </tr>
+            <tr>
+              <td>Colonialtown Community Garden</td>
+              <td>1517 Lake Highland Drive</td>
+              <td>13 garden plots</td>
+              <td>colonialtowncommunitygarden@gmail.com</td>
+            </tr>
+            <tr>
+              <td>Festival Park</td>
+              <td>2911 East Robinson Street</td>
+              <td>30 garden plots</td>
+              <td>festivalparkcommunitygarden@gmail.com</td>
+            </tr>
+            <tr>
+              <td>Englewood Park</td>
+              <td>6123 La Costa Drive</td>
+              <td>22 garden plots</td>
+              <td>
+                Robert Lorento at rglbob@bellsouth.net, or Tom Cooper at
+                mochacoop@bellsouth.net
+              </td>
+            </tr>
+            <tr>
+              <td>Lake Davis/Greenwood Cemetery</td>
+              <td>1226 Elmwood Street</td>
+              <td>16 garden plots</td>
+              <td>
+                Kathryn Hornblette, Garden Committee President, at
+                LDGCommunityGarden@gmail.com.
+              </td>
+            </tr>
+            <tr>
+              <td>Lake Druid Park</td>
+              <td>
+                899 Coy Drive (take Coy Drive north from Colonial, the road dead
+                ends into the Park)
+              </td>
+              <td>50 garden plots</td>
+              <td>lakedruidgarden@gmail.com</td>
+            </tr>
+            <tr>
+              <td>Laureate Park I – resident only</td>
+              <td>8495 Laureate Boulevard</td>
+              <td>15 garden plots</td>
+              <td>contact the Laureate Park Home Owner’s Association</td>
+            </tr>
+            <tr>
+              <td>Laureate Park II – resident onlys</td>
+              <td>9661 Tavistock Lakes Boulevard</td>
+              <td>29 garden plots</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Northwest Community Center</td>
+              <td>3955 W D Judge Drive</td>
+              <td>17 garden plots</td>
+              <td>luciana.deshay@orlando.gov</td>
+            </tr>
+            <tr>
+              <td>Parramore</td>
+              <td>654 West Robinson Street</td>
+              <td>19 garden plots</td>
+              <td>Lynn Nicholson at 407.719.7906</td>
+            </tr>
+            <tr>
+              <td>Washington Shores</td>
+              <td>3600 Rogers Drive</td>
+              <td>20 garden plots</td>
+              <td>Samantha Wallace at sam_wallace@hotmail.com</td>
+            </tr>
+            <tr>
+              <td>Rock Lake Neighborhood Center</td>
+              <td>440 North Tampa Avenue</td>
+              <td>19 garden plots</td>
+              <td>Samantha Wallace at sam_wallace@hotmail.com.</td>
+            </tr>
+            <tr>
+              <td>Dover Shores</td>
+              <td>1400 Gaston Foster Road</td>
+              <td>14 garden plots</td>
+              <td>dovershorescommunitygarden@gmail.com</td>
+            </tr>
+            <tr>
+              <td>Englewood Neighborhood Center</td>
+              <td>6123 La Costa Drive</td>
+              <td>20 garden plots</td>
+              <td>alexandra.temes@orlando.gov</td>
+            </tr>
+            <tr>
+              <td>Lake Eola Heights</td>
+              <td>406 East Amelia Street</td>
+              <td>36 garden plots</td>
+              <td>lehgc@gmail.com</td>
+            </tr>
+            <tr>
+              <td>Citrus Square – resident only</td>
+              <td>5625 Hickey Drive</td>
+              <td>7 garden plots</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Mai Kai Condominiums – resident only</td>
+              <td>1935 Conway Road</td>
+              <td>14 garden plots</td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </section>
+    </div>
+    <div class="get-involved-info">
+      <h1 class="garden-heading2">Want to sponser a garden?</h1>
       <br />
       <p>
-        Check out our upcoming events! In order to participate, use the contact
-        form at the bottom of the page to sign up at least 24 hours prior to the
-        event. Make sure to include the event code, your full name, and any
-        questions you might have.
+        If you are wanting to help support the community garden plots we accept
+        donations of gardening materials.
+        <br />
+        With your donation you will have a garden rock with you name on it
+        displayed in the garden.
       </p>
     </div>
-    <section class="garden-section">
-      <div style="overflow-x: auto">
-        <table id="community-gardens">
-          <tr>
-            <th>Garden</th>
-            <th>Location</th>
-            <th>Plots</th>
-            <th>Contact</th>
-          </tr>
-          <tr>
-            <td>Colonialtown Community Garden</td>
-            <td>1517 Lake Highland Drive</td>
-            <td>13 garden plots</td>
-            <td>colonialtowncommunitygarden@gmail.com</td>
-          </tr>
-          <tr>
-            <td>Festival Park</td>
-            <td>2911 East Robinson Street</td>
-            <td>30 garden plots</td>
-            <td>festivalparkcommunitygarden@gmail.com</td>
-          </tr>
-          <tr>
-            <td>Englewood Park</td>
-            <td>6123 La Costa Drive</td>
-            <td>22 garden plots</td>
-            <td>
-              Robert Lorento at rglbob@bellsouth.net, or Tom Cooper at
-              mochacoop@bellsouth.net
-            </td>
-          </tr>
-          <tr>
-            <td>Lake Davis/Greenwood Cemetery</td>
-            <td>1226 Elmwood Street</td>
-            <td>16 garden plots</td>
-            <td>
-              Kathryn Hornblette, Garden Committee President, at
-              LDGCommunityGarden@gmail.com.
-            </td>
-          </tr>
-          <tr>
-            <td>Lake Druid Park</td>
-            <td>
-              899 Coy Drive (take Coy Drive north from Colonial, the road dead
-              ends into the Park)
-            </td>
-            <td>50 garden plots</td>
-            <td>lakedruidgarden@gmail.com</td>
-          </tr>
-          <tr>
-            <td>Laureate Park I – resident only</td>
-            <td>8495 Laureate Boulevard</td>
-            <td>15 garden plots</td>
-            <td>contact the Laureate Park Home Owner’s Association</td>
-          </tr>
-          <tr>
-            <td>Laureate Park II – resident onlys</td>
-            <td>9661 Tavistock Lakes Boulevard</td>
-            <td>29 garden plots</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Northwest Community Center</td>
-            <td>3955 W D Judge Drive</td>
-            <td>17 garden plots</td>
-            <td>luciana.deshay@orlando.gov</td>
-          </tr>
-          <tr>
-            <td>Parramore</td>
-            <td>654 West Robinson Street</td>
-            <td>19 garden plots</td>
-            <td>Lynn Nicholson at 407.719.7906</td>
-          </tr>
-          <tr>
-            <td>Washington Shores</td>
-            <td>3600 Rogers Drive</td>
-            <td>20 garden plots</td>
-            <td>Samantha Wallace at sam_wallace@hotmail.com</td>
-          </tr>
-          <tr>
-            <td>Rock Lake Neighborhood Center</td>
-            <td>440 North Tampa Avenue</td>
-            <td>19 garden plots</td>
-            <td>Samantha Wallace at sam_wallace@hotmail.com.</td>
-          </tr>
-          <tr>
-            <td>Dover Shores</td>
-            <td>1400 Gaston Foster Road</td>
-            <td>14 garden plots</td>
-            <td>dovershorescommunitygarden@gmail.com</td>
-          </tr>
-          <tr>
-            <td>Englewood Neighborhood Center</td>
-            <td>6123 La Costa Drive</td>
-            <td>20 garden plots</td>
-            <td>alexandra.temes@orlando.gov</td>
-          </tr>
-          <tr>
-            <td>Lake Eola Heights</td>
-            <td>406 East Amelia Street</td>
-            <td>36 garden plots</td>
-            <td>lehgc@gmail.com</td>
-          </tr>
-          <tr>
-            <td>Citrus Square – resident only</td>
-            <td>5625 Hickey Drive</td>
-            <td>7 garden plots</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Mai Kai Condominiums – resident only</td>
-            <td>1935 Conway Road</td>
-            <td>14 garden plots</td>
-            <td></td>
-          </tr>
-        </table>
-      </div>
-    </section>
-    <h1 class="garden-heading2">Want to sponser a garden?</h1>
-
     <section class="circle-section">
       <div class="circle-container">
         <ul class="circles inline">
