--- a/resources.html
+++ b/resources.html
@@ -29,6 +29,60 @@
   <body>
     <div class="article-section">
       <h1>Article cards & educative info goes here</h1>
+      <br />
+      <div class="cards">
+        <article class="card">
+          <header>
+            <h2>A short heading</h2>
+          </header>
+          <img src="" alt="" />
+          <div class="content">
+            <p>
+              Brief summary of what this article is about Brief summary of what
+              this article is about Brief summary of what this article is about
+            </p>
+          </div>
+        </article>
+
+        <article class="card">
+          <header>
+            <h2>A short heading</h2>
+          </header>
+          <img src="" alt="" />
+          <div class="content">
+            <p>
+              Brief summary of what this article is about Brief summary of what
+              this article is about Brief summary of what this article is about
+            </p>
+          </div>
+        </article>
+
+        <article class="card">
+          <header>
+            <h2>A short heading</h2>
+          </header>
+          <img src="" alt="" />
+          <div class="content">
+            <p>
+              Brief summary of what this article is about Brief summary of what
+              this article is about Brief summary of what this article is about
+            </p>
+          </div>
+        </article>
+
+        <article class="card">
+          <header>
+            <h2>A short heading</h2>
+          </header>
+          <img src="" alt="" />
+          <div class="content">
+            <p>
+              Brief summary of what this article is about Brief summary of what
+              this article is about Brief summary of what this article is about
+            </p>
+          </div>
+        </article>
+      </div>
     </div>
     <div class="green-section">
       <h1 class="r-heading">Additional Resources</h1>
