--- a/resources.html
+++ b/resources.html
@@ -149,6 +149,11 @@
       <div class="footer-grid">
         <!--SECTION 1-->
         <div class="footer-grid-item item1">
+          <img
+            class="logo"
+            src="img/logo.png"
+            alt="Growlando urban farming logo"
+          />
           <h4>About Growlando</h4>
           <p>
             We are a non-profit agriculture program that works to provide
