added img & vid

--- a/about.html
+++ b/about.html
@@ -16,10 +16,17 @@
   </head>
 
   <nav class="fill">
-    <h1>Growlando</h1>
     <ul>
+      <li>
+        <img
+          class="logonav"
+          src="img/logo.png"
+          alt="Growlando urban farming logo"
+        />
+      </li>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
+
       <li><a href="getinvolved.html">Get Involved</a></li>
       <li><a href="resources.html">Resources</a></li>
       <li><a href="gallery.html">Gallery</a></li>
@@ -62,21 +69,13 @@
         </div>
         <!--EDIT IMAGE SIZES-->
         <div class="mission-section-image">
-          <img
-            src="img/img24.jpg"
-            width="100%"
-            alt="close-up of pink flowers"
-          />
+          <video src="./img/mission-video.mp4" muted loop autoplay></video>
         </div>
       </div>
     </div>
     <div class="row1 noMargin">
       <div class="goal-section-image">
-        <img
-          src="img/img25.jpg"
-          width="100%"
-          alt="blue sky and sun over field of yellow flowers"
-        />
+        <video src="./img/goal-video.mp4" muted loop autoplay></video>
       </div>
       <div class="goal-section">
         <h1>Goals</h1>
