--- a/resources.html
+++ b/resources.html
@@ -28,58 +28,63 @@
 
   <body>
     <div class="article-section">
-      <h1>Article cards & educative info goes here</h1>
+      <h1>Blog posts</h1>
+      <br />
       <br />
       <div class="cards">
         <article class="card">
           <header>
-            <h2>A short heading</h2>
+            <h2>Article title</h2>
           </header>
-          <img src="" alt="" />
+          <img src="img/article-pic1.jpg" alt="green sapling in palm of hand" />
           <div class="content">
             <p>
               Brief summary of what this article is about Brief summary of what
               this article is about Brief summary of what this article is about
             </p>
+            <a href="#">Read more</a>
           </div>
         </article>
 
         <article class="card">
           <header>
-            <h2>A short heading</h2>
+            <h2>Article title</h2>
           </header>
-          <img src="" alt="" />
+          <img src="img/article-pic2.jpg" alt="person repotting a plant" />
           <div class="content">
             <p>
               Brief summary of what this article is about Brief summary of what
               this article is about Brief summary of what this article is about
             </p>
+            <a href="#">Read more</a>
           </div>
         </article>
 
         <article class="card">
           <header>
-            <h2>A short heading</h2>
+            <h2>Article title</h2>
           </header>
-          <img src="" alt="" />
+          <img src="img/article-pic3.jpg" alt="squirrel" />
           <div class="content">
             <p>
               Brief summary of what this article is about Brief summary of what
               this article is about Brief summary of what this article is about
             </p>
+            <a href="#">Read more</a>
           </div>
         </article>
 
         <article class="card">
           <header>
-            <h2>A short heading</h2>
+            <h2>Article title</h2>
           </header>
-          <img src="" alt="" />
+          <img src="img/article-pic4.jpg" alt="child touching plants" />
           <div class="content">
             <p>
               Brief summary of what this article is about Brief summary of what
               this article is about Brief summary of what this article is about
             </p>
+            <a href="#">Read more</a>
           </div>
         </article>
       </div>
