--- a/getinvolved.html
+++ b/getinvolved.html
@@ -27,19 +27,21 @@
   </nav>
 
   <body>
-    <div class="get-involved-info">
-      <h1 class="garden-heading2">How can I get involved?</h1>
+    <div class="garden-section">
+      <h1 class="garden-heading">How can I get involved?</h1>
       <br />
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+        tempor incididunt ut labore et dolore magna aliqua. <br />
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+        ut aliquip ex ea commodo consequat.<br />
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur.<br />
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+        officia deserunt mollit anim id est laborum.
       </p>
-      <br /><br />
+    </div>
+    <div class="get-involved-info">
       <h1 class="garden-heading2">Events</h1>
       <p>
         Check out our upcoming events!
