--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           in Orlando, Florida
         </h3>
         <br />
-        <a href="about.html">About</a>
-        <a href="getinvolved.html">Get Involved</a>
-        <a href="resources.html">Resources</a>
-        <a href="gallery.html">Gallery</a>
+        <a style="font-family: Raleway, sans-serif" href="about.html">About</a>
+        <a style="font-family: Raleway, sans-serif" href="getinvolved.html">Get Involved</a>
+        <a style="font-family: Raleway, sans-serif" href="resources.html">Resources</a>
+        <a style="font-family: Raleway, sans-serif" href="gallery.html">Gallery</a>
       </div>
     </section>
   </body>
