--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <li>
         <img
           class="logonav"
-          src="img/logo.png"
+          src="img/horizontal-logo.png"
           alt="Growlando urban farming logo"
         />
       </li>
