--- a/resources.html
+++ b/resources.html
@@ -16,8 +16,14 @@
   </head>
 
   <nav class="fill">
-    <h1>Growlando</h1>
     <ul>
+      <li>
+        <img
+          class="logonav"
+          src="img/horizontal-logo.png"
+          alt="Growlando urban farming logo"
+        />
+      </li>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="getinvolved.html">Get Involved</a></li>
