--- a/about.html
+++ b/about.html
@@ -41,15 +41,17 @@
           <div class="content">
             <h1>What is Urban Farming?</h1>
             <p>
-              Growlando is an Orlando, FL based company that strives to make
-              efficient use of our beautiful city space in order to feed the
-              very people who inhabit it. Urban farming consists of cultivating,
-              processing, and distributing food in or around the city’s urban
-              areas. This leads to sustainable methods that contribute to
-              Orlando’s healthy food supply, cutting carbon emissions, and local
-              economy. With the help of amazing staff, community volunteers, and
-              green spaces all around, we have cultivated Orlando’s first city
-              wide urban farming program.
+              Urban farming consists of cultivating, processing, and
+              distributing food in or around the city’s urban areas. This leads
+              to sustainable methods that contribute to Orlando’s healthy food
+              supply, cutting carbon emissions, and local economy.
+            </p>
+            <p>
+              The introduction of our urban farming program can help reduce
+              negative environmental impacts by promoting sustainable
+              agriculture as well as increase the sense of interconnection
+              within communities. We strive to provide long-term food security
+              as well as improve economic, social, and environmental problems.
             </p>
           </div>
         </div>
@@ -61,10 +63,22 @@
           <h1>Mission Statement</h1>
           <br />
           <p>
+            Growlando is an Orlando, FL based company that strives to make
+            efficient use of our beautiful city space in order to feed the very
+            people who inhabit it.
+          </p>
+          <br />
+          <p>
             Our mission is to supply Orlando with an abundance of food for the
             community and those in need while encouraging the establishment of
             unused land, getting locals active and outside, and finally creating
             an economically sustainable program for our city.
+          </p>
+          <br />
+          <p>
+            With the help of amazing staff, community volunteers, and green
+            spaces all around, we have cultivated Orlando’s first city wide
+            urban farming program.
           </p>
         </div>
         <!--EDIT IMAGE SIZES-->
@@ -80,12 +94,32 @@
       <div class="goal-section">
         <h1>Goals</h1>
         <br />
+        <h3>Increase community garden plots in unused land in neighborhoods</h3>
         <p>
-          The introduction of our urban farming program can help reduce negative
-          environmental impacts by promoting sustainable agriculture as well as
-          increase the sense of interconnection within communities. We strive to
-          provide long-term food security as well as improve economic, social,
-          and environmental problems.
+          Urban farms can raise the propety value of homes in the neighborhood
+          it is in. It also benefits the residents living in the neighborhood to
+          form a community bond.
+        </p>
+        <br />
+        <h3>
+          Work with schools of grades K-12 to develop a plan for a community
+          garden on school grounds, and establish curriculum in each grade for
+          students to maintain and care for the garden
+        </h3>
+        <p>
+          Kids and teens learning about growing their own food helps teach them
+          to be more food conscious and establish healthy eating habits. It is
+          also an activity for students to work together and be hands-on in
+          learning.
+        </p>
+        <br />
+        <h3>
+          Cut down on ‘food miles’ and advocate for more farm-to-table produce
+          in the Orlando community
+        </h3>
+        <p>
+          Growing local food ensures the food will be safe, high-quality, and
+          sustainable. Plus the benefits of year-round growing!
         </p>
       </div>
     </div>
@@ -147,6 +181,7 @@
               </li>
             </ul>
           </div>
+          <p>Follow us on social media!</p>
         </div>
       </div>
     </footer>
