--- a/gallery.html
+++ b/gallery.html
@@ -50,11 +50,13 @@
 
   <nav class="fill">
     <ul>
-      <li> <img
-        class="logonav"
-        src="img/horizontal-logo.png"
-        alt="Growlando urban farming logo"
-      /></li>
+      <li>
+        <img
+          class="logonav"
+          src="img/horizontal-logo.png"
+          alt="Growlando urban farming logo"
+        />
+      </li>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="getinvolved.html">Get Involved</a></li>
@@ -275,6 +277,7 @@
               </li>
             </ul>
           </div>
+          <p>Follow us on social media!</p>
         </div>
       </div>
     </footer>
