--- a/getinvolved.html
+++ b/getinvolved.html
@@ -49,6 +49,7 @@
     </div>
     <div class="get-involved-info">
       <h1 class="garden-heading2">Events</h1>
+      <br />
       <p>
         Check out our upcoming events!
         <br />In order to participate, use the contact form at the bottom of the
@@ -186,11 +187,22 @@
       <h1 class="garden-heading2">Want to sponser a garden?</h1>
       <br />
       <p>
-        If you are wanting to help support the community garden plots we accept
-        donations of gardening materials.
-        <br />
-        With your donation you will have a garden rock with you name on it
-        displayed in the garden.
+        If you are wanting to help support the community garden plots, we accept
+        donations of gardening materials such as:
+      </p>
+      <br />
+      <ul>
+        <li>Potting soil</li>
+        <li>Plant food</li>
+        <li>Seeds</li>
+        <li>Gardening shears</li>
+        <li>Gardening gloves</li>
+        <li>Trellises</li>
+      </ul>
+      <br />
+      <p>
+        With your donation you will have a garden rock with your name on it
+        displayed in the garden!
       </p>
     </div>
     <section class="circle-section">
@@ -301,6 +313,7 @@
               </li>
             </ul>
           </div>
+          <p>Follow us on social media!</p>
         </div>
       </div>
     </footer>
