--- a/resources.html
+++ b/resources.html
@@ -68,7 +68,7 @@
 
         <article class="card">
           <header>
-            <h2>Article title</h2>
+            <h2>Preventing animals and pests in your garden</h2>
           </header>
           <img src="img/article-pic3.jpg" alt="squirrel" />
           <div class="content">
@@ -82,7 +82,7 @@
 
         <article class="card">
           <header>
-            <h2>Article title</h2>
+            <h2>Getting kids involved in gardening</h2>
           </header>
           <img src="img/article-pic4.jpg" alt="child touching plants" />
           <div class="content">
@@ -214,6 +214,7 @@
               </li>
             </ul>
           </div>
+          <p>Follow us on social media!</p>
         </div>
       </div>
     </footer>
