replaced filler text with content

--- a/resources.html
+++ b/resources.html
@@ -40,7 +40,7 @@
       <div class="cards">
         <article class="card">
           <header>
-            <h2>Article title</h2>
+            <h2>Potted plants vs hydroponic gardening</h2>
           </header>
           <img src="img/article-pic1.jpg" alt="green sapling in palm of hand" />
           <div class="content">
@@ -54,7 +54,7 @@
 
         <article class="card">
           <header>
-            <h2>Article title</h2>
+            <h2>How to get started on your growing your own food at home</h2>
           </header>
           <img src="img/article-pic2.jpg" alt="person repotting a plant" />
           <div class="content">
