--- a/gallery.html
+++ b/gallery.html
@@ -71,16 +71,20 @@
         <h1>Featured Post</h1>
         <br />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu non
-          diam phasellus vestibulum lorem sed risus ultricies. Felis eget velit
-          aliquet sagittis id consectetur purus ut. Volutpat commodo sed egestas
-          egestas fringilla phasellus. Nulla aliquet enim tortor at auctor urna
-          nunc. Suspendisse interdum consectetur libero id faucibus nisl
-          tincidunt eget. Mauris in aliquam sem fringilla ut morbi. Ut sem nulla
-          pharetra diam sit amet nisl. <br /><br />
+          This past weekend showed great turn out at our community gardening
+          event located in south Orlando near the Florida Mall. This farm/garden
+          is owned by a private residence and asked for Growlando volunteers to
+          help harvest the growing crops as well as plant new ones. All ages
+          were welcome to join and got to take home a small basket of the
+          vegetables they harvested. The rest of the harvest will be sold at
+          this week's Lake Eola's farmer's market. Be sure to attend the
+          farmer's market to get fresh produce! Thank you again to all of our
+          Growlando volunteers who came out to help!
+          <br /><br />
           To be the first to see our event pictures follow us on Instagram!
-          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a> <br />
+          If you'd like your post to be feautured use the hashtag
+          #growlandoevents
         </p>
 
         <div class="slideshow-container">
