--- a/getinvolved.html
+++ b/getinvolved.html
@@ -37,14 +37,35 @@
       <h1 class="garden-heading">How can I get involved?</h1>
       <br />
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. <br />
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        ut aliquip ex ea commodo consequat.<br />
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-        dolore eu fugiat nulla pariatur.<br />
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-        officia deserunt mollit anim id est laborum.
+        We are always looking for volunteers to join us in the Orlando community
+        to help plant, harvest, and survery new garden locations. <br />
+        If you are interested in becoming a volunteer, please use the contact
+        form at the bottom of this page and send us a message to be added to our
+        volunteer list.<br />
+        We send out email notifications to our volunteers about the Growlando
+        events coming up that require volunteer help.
+      </p>
+      <br /><br />
+      <h3>Not interested in volunteering but still want to be involved?</h3>
+      <br />
+      <p>
+        We are always accepting donations of gardening materials to help support
+        our community gardens. <br />
+        See the 'sponser a garden' section below for how to donate and what is
+        accepted as a donation.
+      </p>
+      <br /><br />
+      <h3>
+        Can't volunteer and can't donate but still want to show support to
+        Growlando?
+      </h3>
+      <br />
+      <p>
+        We ask that you help spread the word about Growlando and the impact we
+        are trying to make in the Orlando community.<br />
+        In addition to spreading the word, check out our resource page for info
+        on how to start your own garden at home.<br />
+        Growing your own food is rewarding and delicious!
       </p>
     </div>
     <div class="get-involved-info">
@@ -53,17 +74,28 @@
       <p>
         Check out our upcoming events!
         <br />In order to participate, use the contact form at the bottom of the
-        page to sign up at least 24 hours prior to the event. <br />
-        Make sure to include the event code, your full name, and any questions
-        you might have.
+        page to sign up as a volunteer at least 24 hours prior to the event.
+        <br />
+        Make sure to include the event code from the post, your full name, and
+        any questions you might have. <br />
       </p>
       <br />
       <h3>Follow us on Facebook for event postings!</h3>
-      <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-facebook"></i></a><br /><br />
+      <p>
+        Don't have a facebook? We also send out our event postings to our
+        volunteers through email. <br />
+        Use the contact form below and send us a message requesting to be added
+        to our volunteer email list.<br />
+      </p>
     </div>
 
     <div class="garden-section">
       <h1 class="garden-heading">Orlando, FL Community Garden Locations</h1>
+      <p>
+        If you want to participate in a community garden, please reach out to
+        the specified contact that is listed for the location you want to join.
+      </p>
 
       <section class="garden-section">
         <div style="overflow-x: auto">
