--- a/getinvolved.html
+++ b/getinvolved.html
@@ -39,9 +39,9 @@
       <p>
         We are always looking for volunteers to join us in the Orlando community
         to help plant, harvest, and survery new garden locations. <br />
-        If you are interested in becoming a volunteer, please use the contact
-        form at the bottom of this page and send us a message to be added to our
-        volunteer list.<br />
+        If you are interested in becoming a volunteer, please use the
+        <a class="jump-scroll" href="#contact">contact form</a> at the bottom of
+        this page and send us a message to be added to our volunteer list.<br />
         We send out email notifications to our volunteers about the Growlando
         events coming up that require volunteer help.
       </p>
@@ -51,8 +51,9 @@
       <p>
         We are always accepting donations of gardening materials to help support
         our community gardens. <br />
-        See the 'sponser a garden' section below for how to donate and what is
-        accepted as a donation.
+        See the
+        <a class="jump-scroll" href="#sponser">'sponser a garden'</a> section
+        below for how to donate and what is accepted as a donation.
       </p>
       <br /><br />
       <h3>
@@ -73,8 +74,9 @@
       <br />
       <p>
         Check out our upcoming events!
-        <br />In order to participate, use the contact form at the bottom of the
-        page to sign up as a volunteer at least 24 hours prior to the event.
+        <br />In order to participate, use the
+        <a class="jump-scroll" href="#contact">contact form</a> at the bottom of
+        the page to sign up as a volunteer at least 24 hours prior to the event.
         <br />
         Make sure to include the event code from the post, your full name, and
         any questions you might have. <br />
@@ -85,8 +87,9 @@
       <p>
         Don't have a facebook? We also send out our event postings to our
         volunteers through email. <br />
-        Use the contact form below and send us a message requesting to be added
-        to our volunteer email list.<br />
+        Use the <a class="jump-scroll" href="#contact">contact form</a> below
+        and send us a message requesting to be added to our volunteer email
+        list.<br />
       </p>
     </div>
 
@@ -215,7 +218,7 @@
         </div>
       </section>
     </div>
-    <div class="get-involved-info">
+    <div class="get-involved-info" id="sponser">
       <h1 class="garden-heading2">Want to sponser a garden?</h1>
       <br />
       <p>
@@ -255,38 +258,38 @@
         </ul>
       </div>
     </section>
-    <h1 class="garden-heading">Contact Us</h1>
-    <section class="garden-section">
-      <div class="contact-container">
-        <form action="/action_page.php">
-          <label for="fname">First & Last Name</label>
-          <input
-            type="text"
-            id="fname"
-            name="firstname"
-            placeholder="Your name"
-          />
 
-          <label for="email">Email Address</label>
-          <input
-            type="text"
-            id="email"
-            name="Email"
-            placeholder="example@gmail.com"
-          />
+    <div class="garden-section" id="contact">
+      <h1 class="garden-heading">Contact Us</h1>
+      <form>
+        <label for="fname">First & Last Name</label>
+        <input
+          type="text"
+          id="fname"
+          name="firstname"
+          placeholder="Your name"
+        />
 
-          <label for="subject">Message</label>
-          <textarea
-            id="message"
-            name="message"
-            placeholder="Write something.."
-            style="height: 200px"
-          ></textarea>
+        <label for="email">Email Address</label>
+        <input
+          type="text"
+          id="email"
+          name="Email"
+          placeholder="example@gmail.com"
+        />
 
-          <input type="submit" value="Submit" />
-        </form>
-      </div>
-    </section>
+        <label for="subject">Message</label>
+        <textarea
+          id="message"
+          name="message"
+          placeholder="Write something.."
+          style="height: 200px"
+        ></textarea>
+
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+
     <footer>
       <div class="footer-grid">
         <!--SECTION 1-->
