--- a/resources.html
+++ b/resources.html
@@ -34,63 +34,66 @@
 
   <body>
     <div class="article-section">
-      <h1>Blog posts</h1>
+      <h1>Helpful articles</h1>
       <br />
       <br />
       <div class="cards">
         <article class="card">
-          <header>
-            <h2>Potted plants vs hydroponic gardening</h2>
-          </header>
           <img src="img/article-pic1.jpg" alt="green sapling in palm of hand" />
           <div class="content">
+            <h2>Potted plants vs hydroponic gardening</h2>
+            <br />
             <p>
-              Brief summary of what this article is about Brief summary of what
-              this article is about Brief summary of what this article is about
+              Growing plants in soil or without? This article compares the
+              different ways you can grow plants indoors. Which method is better
+              for you?
             </p>
-            <a href="#">Read more</a>
+            <br />
+            <a class="read-more" href="#">Read more</a>
           </div>
         </article>
 
         <article class="card">
-          <header>
-            <h2>How to get started on your growing your own food at home</h2>
-          </header>
           <img src="img/article-pic2.jpg" alt="person repotting a plant" />
           <div class="content">
+            <h2>How to get started growing your own food at home</h2>
+            <br />
             <p>
-              Brief summary of what this article is about Brief summary of what
-              this article is about Brief summary of what this article is about
+              Don't know which plants to grow or what you need to start? This
+              article details how to get started on your home garden whether it
+              be in a house or in an apartment.
             </p>
-            <a href="#">Read more</a>
+            <br />
+            <a class="read-more" href="#">Read more</a>
           </div>
         </article>
 
         <article class="card">
-          <header>
-            <h2>Preventing animals and pests in your garden</h2>
-          </header>
           <img src="img/article-pic3.jpg" alt="squirrel" />
           <div class="content">
+            <h2>Preventing animals and pests in your garden</h2>
+            <br />
             <p>
-              Brief summary of what this article is about Brief summary of what
-              this article is about Brief summary of what this article is about
+              Learn how to prevent bugs and insects from eating your plants,
+              along with animals such as squirrels and birds from feasting on
+              your crops.
             </p>
-            <a href="#">Read more</a>
+            <br />
+            <a class="read-more" href="#">Read more</a>
           </div>
         </article>
 
         <article class="card">
-          <header>
-            <h2>Getting kids involved in gardening</h2>
-          </header>
           <img src="img/article-pic4.jpg" alt="child touching plants" />
           <div class="content">
+            <h2>Getting the family involved in gardening</h2>
+            <br />
             <p>
-              Brief summary of what this article is about Brief summary of what
-              this article is about Brief summary of what this article is about
+              Unsure of what your kids can help with gardening? This article
+              details what is kid-safe and kid-friendly when gardening together.
             </p>
-            <a href="#">Read more</a>
+            <br />
+            <a class="read-more" href="#">Read more</a>
           </div>
         </article>
       </div>
