--- a/getinvolved.html
+++ b/getinvolved.html
@@ -75,8 +75,9 @@
       <p>
         Check out our upcoming events!
         <br />In order to participate, use the
-        <a class="jump-scroll" href="#contact">contact form</a> at the bottom of
-        the page to sign up as a volunteer at least 24 hours prior to the event.
+        <a class="jump-scroll-2" href="#contact">contact form</a> at the bottom
+        of the page to sign up as a volunteer at least 24 hours prior to the
+        event.
         <br />
         Make sure to include the event code from the post, your full name, and
         any questions you might have. <br />
@@ -87,7 +88,7 @@
       <p>
         Don't have a facebook? We also send out our event postings to our
         volunteers through email. <br />
-        Use the <a class="jump-scroll" href="#contact">contact form</a> below
+        Use the <a class="jump-scroll-2" href="#contact">contact form</a> below
         and send us a message requesting to be added to our volunteer email
         list.<br />
       </p>
