--- a/resources.html
+++ b/resources.html
@@ -34,27 +34,12 @@
 
   <body>
     <div class="article-section">
-      <h1>Helpful articles</h1>
+      <h1>Helpful Articles</h1>
       <br />
       <br />
       <div class="cards">
         <article class="card">
-          <img src="img/article-pic1.jpg" alt="green sapling in palm of hand" />
-          <div class="content">
-            <h2>Potted plants vs hydroponic gardening</h2>
-            <br />
-            <p>
-              Growing plants in soil or without? This article compares the
-              different ways you can grow plants indoors. Which method is better
-              for you?
-            </p>
-            <br />
-            <a class="read-more" href="#">Read more</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <img src="img/article-pic2.jpg" alt="person repotting a plant" />
+          <img src="img/article-pic2.jpg" alt="green sapling in palm of hand" />
           <div class="content">
             <h2>How to get started growing your own food at home</h2>
             <br />
@@ -62,6 +47,21 @@
               Don't know which plants to grow or what you need to start? This
               article details how to get started on your home garden whether it
               be in a house or in an apartment.
+            </p>
+            <br />
+            <a class="read-more" href="#">Read more</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/article-pic1.jpg" alt="person repotting a plant" />
+          <div class="content">
+            <h2>Potted plants vs hydroponic gardening</h2>
+            <br />
+            <p>
+              Growing plants in soil or without? This article compares the
+              different ways you can grow plants indoors. Which method is better
+              for you?
             </p>
             <br />
             <a class="read-more" href="#">Read more</a>
@@ -90,7 +90,8 @@
             <br />
             <p>
               Unsure of what your kids can help with gardening? This article
-              details what is kid-safe and kid-friendly when gardening together.
+              details what is kid-safe and kid-friendly ideas when gardening
+              together.
             </p>
             <br />
             <a class="read-more" href="#">Read more</a>
