line-height styling

--- a/about.html
+++ b/about.html
@@ -93,18 +93,21 @@
       <div class="goal-section">
         <h1>Goals</h1>
         <br />
-        <h3>Increase community garden plots in unused land in neighborhoods</h3>
+        <p class="goal-strong">
+          Increase community garden plots in unused land in neighborhoods
+        </p>
         <p>
-          Urban farms can raise the propety value of homes in the neighborhood
-          it is in. It also benefits the residents living in the neighborhood to
-          form a community bond.
+          A neighborhood community garden benefits the residents living in the
+          neighborhood by producing fresh food right down their street and
+          forming a bond within the community. It also can help raise the
+          propety value of homes in the neighborhood.
         </p>
         <br />
-        <h3>
+        <p class="goal-strong">
           Work with schools of grades K-12 to develop a plan for a community
           garden on school grounds, and establish curriculum in each grade for
           students to maintain and care for the garden
-        </h3>
+        </p>
         <p>
           Kids and teens learning about growing their own food helps teach them
           to be more food conscious and establish healthy eating habits. It is
@@ -112,10 +115,10 @@
           learning.
         </p>
         <br />
-        <h3>
+        <p class="goal-strong">
           Cut down on ‘food miles’ and advocate for more farm-to-table produce
           in the Orlando community
-        </h3>
+        </p>
         <p>
           Growing local food ensures the food will be safe, high-quality, and
           sustainable. Plus the benefits of year-round growing!
