--- a/resources.html
+++ b/resources.html
@@ -89,7 +89,7 @@
             <h2>Getting the family involved in gardening</h2>
             <br />
             <p>
-              Unsure of what your kids can help with gardening? This article
+              Unsure of how your kids can help with gardening? This article
               details what is kid-safe and kid-friendly ideas when gardening
               together.
             </p>
