--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,30 @@
     />
     <!-- stylesheet -->
     <link rel="stylesheet" href="style/main.css" />
+
+    <!-- fav icon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#266041" />
+    <meta name="msapplication-TileColor" content="#f2f1df" />
+    <meta name="theme-color" content="#f2f1df" />
+
     <!-- gallery slideshow javascript-->
     <script>
       var slideIndex = 1;
